# tree-sitter-npf

./: .gitignore  .tmuxp.yaml  CMakeLists.txt  Cargo.toml  Makefile  Package.swift  README.md  binding.gyp  go.mod  grammar.js  helix.md  package-lock.json  package.json  pyproject.toml  setup.py  test_file.npf  tree-sitter.json
bindings/c/: tree-sitter-npf.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_npf/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterNpf/: npf.h
bindings/swift/TreeSitterNpfTests/: TreeSitterNpfTests.swift
queries/: highlights.scm  injections.scm
src/: grammar.json  node-types.json  parser.c  scanner.c
test/corpus/: comments.txt  roles.txt  script_section.txt  sections.txt  tags.txt  test_percentage.txt
