[package]
name = "tree-sitter-npf"
description = "Parser for the npf language used to orchestrate network experiments"
version = "0.1.0"
authors = ["Nikita Tyunyayev <nikita.tyunyayev@uclouvain.be>"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "npf"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/ntyunyayev/tree-sitter-npf"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = ["bindings/rust/*", "grammar.js", "queries/*", "src/*"]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.1.22"

[dev-dependencies]
tree-sitter = "0.24.3"
